I finished my 1st draft of my Portfolio

--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Tygue's Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=League+Script" rel="stylesheet">
+
 </head>
 <body>
 	<nav>
+		<!--Navigation Bar -->
+
+<div class="dropdown">
+  <button class="dropbtn">Home</button>
+  <div class="dropdown-content">
+    <a href="#aboutme">AboutMe</a>
+    <a href="#projects">Projects</a>
+    <a href="#contacts">Contacts</a>
+  </div>
+</div>
 	<ul>
-		<li><a href="#aboutme">About Me</a></li>
-		<li><a href="#projects">Projects</a></li>
-		<li><a href="#contacts">Contacts</a></li>
 		<span>
 		<li><a href="https://github.com"><img src="Icons/github.png" class="icon"></a></li>
 		<li><a href="https://instagram.com"><img src="Icons/instagram.png" class="icon"></a></li>
 		</span>
 	</ul>
 </nav>
-<header>Hi, I'm Tygue Dawson. Welcome to my Page!</header>
+
+<header> I'm Tygue Dawson. 
+Welcome to my Page!</header>
 <main>
 	<h1>About Me</h1>
-	<p>Hi, my name is Tygue Dawson. I am currently living in Harlem in New York City for 14 years. I live with my dog ​​and my mother. My dog's name is Sonny. He loves to pay attention.</p>
-	<h2>Projects</h2>
+	<p>Hi, my name is Tygue Dawson. I am currently living in Harlem in New York City for 14 years. I live with my dog ​​and my mother. My dog's name is Sonny. He loves to have attention. I currently go to school at KIPP NYC College Prep in the Bronx. I am currently at a program called Code Next(NYC).</p>
+	<h1>Projects</h1>
+	<p>Here are some of the Projects I have worked on here at my time at Code Next...</p>
+	<h1>Contacts</h1>
+	<p>I can be reached at this email...
+		tygue.dawson@csedge.org</p>
+	<p>Share with me how I can reach you...
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBuIAZJvKCrVz5EO-CcpNMyoQcrXsKzNACIUSr8Zp5VTe5Dw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	
 </main>
 </body>
