I modified the background anf font

--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
 	</ul>
 </nav>
 
-<header> I'm Tygue Dawson. 
-Welcome to my Page!</header>
+<header>  Tygue Dawson </header>
 <main>
 	<h1>About Me</h1>
-	<p>Hi, my name is Tygue Dawson. I am currently living in Harlem in New York City for 14 years. I live with my dog ​​and my mother. My dog's name is Sonny. He loves to have attention. I currently go to school at KIPP NYC College Prep in the Bronx. I am currently at a program called Code Next(NYC).</p>
+	<p1>Hi, my name is Tygue Dawson. I am currently living in Harlem in New York City for 14 years. I live with my dog ​​and my mother. My dog's name is Sonny. He loves to have attention. I currently go to school at KIPP NYC College Prep in the Bronx. I am currently at a program called Code Next(NYC).</p1>
 	<h1>Projects</h1>
-	<p>Here are some of the Projects I have worked on here at my time at Code Next...</p>
+	<p2>Here are some of the Projects I have worked on here at my time at Code Next...
+
+	</p2>
 	<h1>Contacts</h1>
-	<p>I can be reached at this email...
-		tygue.dawson@csedge.org</p>
-	<p>Share with me how I can reach you...
+	<p3>I can be reached at this email...
+		tygue.dawson@csedge.org</p3>
+
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBuIAZJvKCrVz5EO-CcpNMyoQcrXsKzNACIUSr8Zp5VTe5Dw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-	
+	<p4>Share with me how I can reach you with the form above!</p4>
 </main>
 </body>
 </html>
